--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 <body>
 
@@ -32,54 +32,61 @@
 
         <ul class="deck">
             <li class="card">
-                <i class="face fa fa-diamond"></i>
+                <i class="face fa fa-diamond animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-paper-plane-o"></i>
+                <i class="face fa fa-paper-plane-o animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-anchor"></i>
+                <i class="face fa fa-anchor animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-bolt"></i>
+                <i class="face fa fa-bolt animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-cube"></i>
+                <i class="face fa fa-cube animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-anchor"></i>
+                <i class="face fa fa-anchor animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-leaf"></i>
+                <i class="face fa fa-leaf animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-bicycle"></i>
+                <i class="face fa fa-bicycle animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-diamond"></i>
+                <i class="face fa fa-diamond animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-bomb"></i>
+                <i class="face fa fa-bomb animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-leaf"></i>
+                <i class="face fa fa-leaf animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-bomb"></i>
+                <i class="face fa fa-bomb animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-bolt"></i>
+                <i class="face fa fa-bolt animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-bicycle"></i>
+                <i class="face fa fa-bicycle animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-paper-plane-o"></i>
+                <i class="face fa fa-paper-plane-o animated"></i>
             </li>
             <li class="card">
-                <i class="face fa fa-cube"></i>
+                <i class="face fa fa-cube animated"></i>
             </li>
         </ul>
+        
+        <div class = "winBox">
+        	<div class = "youWin">
+        		<h2>Great Job! You've Won!</h2>
+        		<button>Have Another Go!</button>
+        	</div>
+        </div>
     </div>
 
     <script src="js/app.js"></script>
