--- a/index.html
+++ b/index.html
@@ -2,28 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Matching Game</title>
     <meta name="description" content="">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
   	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+
 </head>
 <body>
 
     <div class="container">
         <header>
-            <h1>Matching Game</h1>
+            <h1>Memory Game</h1>
         </header>
 
         <section class="score-panel">
+        	<span class="moves">Score</span> 
+
         	<ul class="stars">
+        		<li><i class="fa fa-star"></i></li>
+        		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+			<span class="timer">
+        		<span id="minutes">00</span>:<span id="seconds">00</span>
+			</span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -83,8 +91,9 @@
         
         <div class = "winBox">
         	<div class = "youWin">
-        		<h2>Great Job! You've Won!</h2>
+        		<h1>Great Job! You've Won!</h1>
         		<button>Have Another Go!</button>
+        		<div class = "score"></div>
         	</div>
         </div>
     </div>
